--- a/qecto-frontend/public/index.html
+++ b/qecto-frontend/public/index.html
@@ -40,7 +40,7 @@
     <link rel="manifest" href="./site.webmanifest" />
     <link rel="manifest" href="./manifest.json" />
   </head>
-  <body>
+  <body className="bg-body text-white">
     <noscript
       >برای اجرای این اپلیکیشن نیاز به فعال بودن جاوااسکریپت دارید.</noscript
     >
